// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CompanyNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="company_name"
      >
        Nazwa pracodawcy
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Nazwa pracodawcy"
          name="company_name"
          placeholder="Nazwa pracodawcy"
          value="3232"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyNameField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="Nazwa pracodawcy"
  name="company_name"
  placeholder="Nazwa pracodawcy"
  value=""
/>
`;

exports[`<CompanyNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="company_name"
      >
        CompanyName*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="CompanyName"
          name="company_name"
          placeholder="Nazwa pracodawcy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="company_name"
      >
        CompanyName
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="CompanyName"
          name="company_name"
          placeholder="Nazwa pracodawcy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
